# CAOS_SYMLAB

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-precompute.txt  requirements.txt
data/: README.md
data-pipeline/: README.md  requirements.txt
deploy/: README.md  pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md  guides.md  method-families.md
frontend/: copy-data.mjs  index.html  live-probe.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
manifests/: antoine-vapour-pressure.json  arrhenius-rate.json  asm1-aerobic-growth.json  ccpp-derating.json  comminution-bond.json  concrete-abrams.json  cstr-conversion.json  feynman-i_12_1.json  feynman-i_12_5.json  feynman-i_14_3.json  feynman-i_25_13.json  feynman-i_26_2.json  feynman-i_29_4.json  feynman-i_34_27.json  feynman-i_39_1.json  feynman-i_43_31.json  feynman-i_6_2a.json  feynman-ii_10_9.json  feynman-ii_27_18.json  feynman-ii_38_14.json  feynman-ii_3_24.json  feynman-ii_8_31.json  feynman-iii_12_43.json  feynman-iii_15_14.json  feynman-iii_17_37.json  flotation-kinetics.json  flotation-silica.json  friction-factor.json  gasturbine-nox.json  heat-exchanger-ntu.json  index.json  lotka-volterra-rhs.json  monod-saturation.json  nikuradse-friction.json  nusselt-gnielinski.json  ore-mineralogy-closure.json  pump-affinity-power.json  stokes-settling.json  strogatz-bacres1.json  strogatz-bacres2.json  (+16 more)
models/: surrogate.json
scripts/: .template_residue_allow  README.md  (+14 more)
(+242 files in other folders)
